crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__pipeline_config_small_model.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
PipelineConfig {
    num_layers: 12,
    hidden_dim: 768,
    num_heads: 12,
    head_dim: 64,
    intermediate_dim: 3072,
    vocab_size: 32000,
    max_seq_len: 2048,
    use_gpu: false,
    fallback_to_cpu: true,
}
