crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__pipeline_execution_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: exec
---
PipelineExecution {
    stages: [
        StageResult {
            stage: Embedding,
            output_shape: [
                1,
                128,
                768,
            ],
            execution_time_ns: 1000000,
            used_gpu: false,
            fallback_triggered: false,
        },
        StageResult {
            stage: Attention,
            output_shape: [
                1,
                128,
                768,
            ],
            execution_time_ns: 8000000,
            used_gpu: false,
            fallback_triggered: false,
        },
    ],
    total_time_ns: 9000000,
    tokens_generated: 1,
}
