crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__pipeline_stage_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: stages
---
[
    Embedding,
    RmsNorm,
    Attention,
    FeedForward,
    FinalNorm,
    LogitProjection,
]
