crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__pipeline_stage_display.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: names
---
[
    "Embedding",
    "RmsNorm",
    "Attention",
    "FeedForward",
    "FinalNorm",
    "LogitProjection",
]
