crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__profiling_report_empty.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: report.to_table()
---
OpenCL Kernel Profiling Report
==============================
Total kernels : 0
Total GPU time: 0.000 ms
Avg kernel    : 0.000 µs

Kernel                          Count    Total(µs)      Min(µs)      Max(µs)      Avg(µs)   StdDev(µs)
-----------------------------------------------------------------------------------------------------------
-----------------------------------------------------------------------------------------------------------
