crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__profiling_session_empty.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: session.summary()
---
SessionSummary {
    total_kernels: 0,
    total_gpu_time_ms: -0.0,
    avg_kernel_time_us: 0.0,
    kernel_breakdown: {},
}
