crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__profiling_session_with_records.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: session.summary()
---
SessionSummary {
    total_kernels: 2,
    total_gpu_time_ms: 0.015,
    avg_kernel_time_us: 7.5,
    kernel_breakdown: {
        "matmul_f32": KernelStats {
            count: 1,
            total_us: 10.0,
            min_us: 10.0,
            max_us: 10.0,
            avg_us: 10.0,
            std_dev_us: 0.0,
        },
        "softmax_f32": KernelStats {
            count: 1,
            total_us: 5.0,
            min_us: 5.0,
            max_us: 5.0,
            avg_us: 5.0,
            std_dev_us: 0.0,
        },
    },
}
