crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__quantize_config_minmax.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
QuantizeConfig {
    block_size: 64,
    method: MinMax,
}
