crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__simd_matmul_config_basic.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
SimdMatmulConfig {
    m: 256,
    n: 512,
    k: 128,
    alpha: 1.0,
    beta: 0.0,
    transpose_a: false,
    transpose_b: false,
}
