crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__simd_matmul_config_transposed.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
SimdMatmulConfig {
    m: 64,
    n: 64,
    k: 64,
    alpha: 2.0,
    beta: 0.5,
    transpose_a: true,
    transpose_b: false,
}
